--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,3 +1,4 @@
 1.0.1: First version of RESTful
 1.0.2: !!! Contains breaking changes and adds default behaviour for index, store, show, update, destroy verbs.
 1.0.3: Added support for querying relations for the index and show verbs.
+1.0.4: !!! Preparing to move to a better API management system
