--- a/models/setting/fields.yaml
+++ b/models/setting/fields.yaml
@@ -7,3 +7,8 @@ fields:
         label: mohsin.rest::lang.settings.prefix_label
         commentAbove: mohsin.rest::lang.settings.prefix_comment
         default: 'api/v1/'
+
+    nodes:
+        label: API Nodes
+        type: partial
+        path: $/mohsin/rest/models/setting/list_nodes.htm
