Added ability to add extra data to nodes
Closes #12 as the Mohsin.Auth plugin now uses the extras field to allow attaching an auth mechanism to the existing nodes.

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -6,3 +6,6 @@
   - Introducing the API Manager
   - Created a Nodes Table
   - create_nodes_table.php
+1.0.6:
+  - Add Extras Field To Nodes Table
+  - add_extras_field_to_nodes_table.php
