fix: Code improved and extracted missed out translation strings.

--- a/controllers/settings/config_form.yaml
+++ b/controllers/settings/config_form.yaml
@@ -3,7 +3,7 @@
 # ===================================
 
 # Record name
-name: Setting
+name: mohsin.rest::lang.settings.label
 
 # Model Form Field configuration
 form: $/mohsin/rest/models/setting/fields.yaml
