--- a/models/node/columns.yaml
+++ b/models/node/columns.yaml
@@ -4,11 +4,11 @@
 
 columns:
     path:
-        label: Node path
+        label: mohsin.rest::lang.node.path_label
         searchable: true
 
     is_enabled:
-        label: Node Enabled
+        label: mohsin.rest::lang.node.enabled
         type: partial
         path: is_enabled
         sortable: false
